--- a/project/activity.html
+++ b/project/activity.html
@@ -33,15 +33,15 @@
             <section class="gallery-section">
                 <div class="gallery">
                     <div class="gallery-item" data-category="community">
-                        <img src="images/activity1.jpg" alt="Community Service">
+                        <img src="images/activity1.jpeg" alt="Community Service">
                         <p>Community service event held on January 15th.</p>
                     </div>
                     <div class="gallery-item" data-category="sports">
-                        <img src="images/activity2.jpg" alt="Sports Day">
+                        <img src="images/activity2.jpeg" alt="Sports Day">
                         <p>Sports day organized for youth on February 10th.</p>
                     </div>
                     <div class="gallery-item" data-category="community">
-                        <img src="images/activity3.jpg" alt="Cultural Festival">
+                        <img src="images/activity3.jpeg" alt="Cultural Festival">
                         <p>Cultural festival celebrating local traditions on March 5th.</p>
                     </div>
                 </div>
