--- a/project/library.html
+++ b/project/library.html
@@ -24,19 +24,19 @@
     <main>
         <div class="contenedor">
             <section class="seccion-centrada">
-                <h2>Inventario de la Biblioteca</h2>
-                <p>Busca libros por título, autor o categoría:</p>
+                <h2>Inventory of the Library</h2>
+                <p>Search for books by title, author or category:</p>
                 <div class="search-container">
-                    <input type="text" id="searchInput" placeholder="Buscar libros...">
+                    <input type="text" id="searchInput" placeholder="Search...">
                     <button class="search-button">🔍</button>
                 </div>
                 <table>
                     <thead>
                         <tr>
-                            <th>Título</th>
-                            <th>Autor</th>
-                            <th>Categoría</th>
-                            <th>Cantidad</th>
+                            <th>Title</th>
+                            <th>Author</th>
+                            <th>Category</th>
+                            <th>Quantity</th>
                         </tr>
                     </thead>
                     <tbody>
