--- a/project/help.html
+++ b/project/help.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Contact information for assistance in the Zumpango community.">
     <meta name="author" content="Alfonso Habana Rosales">
     <link rel="stylesheet" href="style/siteplan.css">
+    <!-- Agregar Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -23,23 +25,36 @@
     </header>
     <main>
         <div class="contenedor">
-            <!-- Título e Instrucciones -->
             <section class="contact-header">
                 <h2>Contact Us</h2>
                 <p>For any questions or assistance, you can reach us through the following channels:</p>
             </section>
 
-            <!-- Medios de Contacto -->
             <section class="contact-center">
                 <ul class="contact-info">
-                    <li><a href="https://www.facebook.com/zumpango" target="_blank"><img src="images/facebook-icon.png" alt="Facebook"> Facebook</a></li>
-                    <li><a href="https://wa.me/1234567890" target="_blank"><img src="images/whatsapp-icon.png" alt="WhatsApp"> WhatsApp</a></li>
-                    <li><a href="https://www.instagram.com/zumpango" target="_blank"><img src="images/instagram-icon.png" alt="Instagram"> Instagram</a></li>
-                    <li><a href="mailto:info@zumpango.org"><img src="images/email-icon.png" alt="Email"> Email</a></li>
+                    <!-- Facebook -->
+                    <li>
+                        <span class="material-icons">facebook</span>
+                        <a href="https://www.facebook.com/zumpango" target="_blank">Facebook</a>
+                    </li>
+                    <!-- WhatsApp -->
+                    <li>
+                        <span class="material-icons">whatsapp</span>
+                        <a href="https://wa.me/1234567890" target="_blank">WhatsApp</a>
+                    </li>
+                    <!-- Instagram -->
+                    <li>
+                        <span class="material-icons">instagram</span>
+                        <a href="https://www.instagram.com/zumpango" target="_blank">Instagram</a>
+                    </li>
+                    <!-- Email -->
+                    <li>
+                        <span class="material-icons">email</span>
+                        <a href="mailto:info@zumpango.org">Email</a>
+                    </li>
                 </ul>
             </section>
 
-            <!-- Formulario de Contacto -->
             <section class="contact-form">
                 <h3>Send Us a Message</h3>
                 <form action="mailto:info@zumpango.org" method="post" enctype="text/plain">
