--- a/index.html
+++ b/index.html
@@ -23,19 +23,20 @@
             </nav>
         </header>
         <main>
-            <section class="card, left">
+            <section class="card left ">
                 <h1 class="box1">About Me</h1>
                 <aside>
                     <img  class="imgrigth" src="images/profile.jpg" alt="Hello, I am Alfonso Habana Rosales" width="200">
                     <p class="txleft">Hello, I am Alfonso Habana Rosales. I am from Mexico, Mexico. I love learning, I also like painting, singing, dancing. But what I love the most is to talk, maybe writing I'm not very good at it, but I love talking. This is my first document. I hope it upload well</p>
                 </aside>
-                <h2>Mexico, Mexico</h2>
+                <hr class="divider">
+                <h2 class="bandera-h2">Mexico, Mexico</h2>
                 <aside class="linea">
                     <img class="imgleft" src="images/mx.jpg" alt="Official Mexico Flag" width="200">
                     <p class="txrigth">Mexico, officially the United Mexican States, is a country in the southern portion of North America. Covering 1,972,550 km², it is the world's 13th largest country by area; with a population of over 130 million, it is the 10th most populous country and has the most Spanish speakers in the world.</p>
                 </aside>
             </section>
-            <section class="card, rigth">
+            <section class="card rigth">
                 <h1 class="box1">Web Dev Resorces</h1>
                 <ul>
                     <li><a href="#">Dev.to Community</a></li>
