--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
             <h1 class="box1">WDD 131 - Fundamentos de la Web dinámica - Alfonso Habana Rosales</h1>
             <nav class="nosubraya">
                 <ul>
-                    <li><a href="linkedin.com">LinkedIn</a></li>
-                    <li><a href="https://byupw.instructure.com/">Canvas</a></li>
-                    <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng&id=p7#p7">Scripture</a></li>
-                    <li><a href="#">Final Project</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="https://www.linkedin.com/in/alfonso-habana-974284316" target="_blank">LinkedIn</a></li>
+                    <li><a href="https://byupw.instructure.com/" target="_blank">Canvas</a></li>
+                    <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng&id=p7#p7" target="_blank">Scripture</a></li>
+                    <li><a href="https://alfonsohr6.github.io/wdd131/project" target="_blank">Final Project</a></li>
                 </ul>
             </nav>
         </header>
