Union de styles

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Site Plan - Zumpango Ward Resource Center</title>
     <!-- Enlazamos el CSS externo -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
 
     <!-- Comentarios explicativos para ti -->
     <!-- Aquí va todo el estilo y comportamiento básico del sitio -->
