--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -66,19 +66,29 @@
         <p><strong>Font Philosophy:</strong> Both fonts are classic, elegant, and readable. They convey tradition and trust — values aligned with the church and community.</p>
     </div>
 
-    <!-- Section: Wireframe Images -->
-    <div class="section wireframe">
-        <h1>Wireframe</h1>
+   <!-- Section: Wireframe Gallery -->
+<div class="section wireframe">
+    <h1>Wireframe</h1>
+    <p>The following are visual examples of layout.</p>
 
-        <img src="images/1.jpg" alt="Wireframe Mobile View">
-
-        <img src="images/2.jpg" alt="Wireframe Desktop View">
-
-        <h2>Additional Images</h2>
-        <p>More visual examples of layout stages:</p>
-        <img src="images/3.jpg" alt="Extra Image 3">
-        <img src="images/4.jpg" alt="Extra Image 4">
+    <!-- Galería de imágenes -->
+    <div class="gallery">
+        <img src="images/1.jpg" alt="Mobile view wireframe">
+        <img src="images/2.jpg" alt="Desktop view wireframe">
+        <img src="images/3.jpg" alt="Additional layout example 1">
+        <img src="images/4.jpg" alt="Additional layout example 2">
     </div>
+</div>
 
+<!-- Nueva sección: Enlace al proyecto -->
+<div class="section">
+    <h1>View the Project</h1>
+    <p>You can see how the project is coming along by visiting the live version of the website:</p>
+    <p><strong>Project Website:</strong> 
+        <a href="https://alfonsohr6.github.io/wdd131/project/"  target="_blank">
+            https://alfonsohr6.github.io/wdd131/project/ 
+        </a>
+    </p>
+</div>
 </body>
 </html>
