--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -50,12 +50,12 @@
         <h1>Color Schema</h1>
         <p><strong>Selected Colors:</strong></p>
         <ul>
-            <li><span class="color-swatch" style="background-color:#8fcaa1;"></span>Primary: <code>#8fcaa1</code> – used in headers and main buttons</li>
-            <li><span class="color-swatch" style="background-color:#e3f9d1;"></span>Accent: <code>#e3f9d1</code> – used in backgrounds and highlights</li>
-            <li><span class="color-swatch" style="background-color:#f8efe7;"></span>Neutral: <code>#f8efe7</code> – used for text containers</li>
-            <li><span class="color-swatch" style="background-color:#74b557;"></span>Secondary: <code>#74b557</code> – used for buttons and links</li>
+            <li><span class="color-swatch" style="background-color:#4300FF;"></span>Primary: <code>#4300FF</code> (rgb(67, 0, 255)) – used in headers and main buttons</li>
+            <li><span class="color-swatch" style="background-color:#0065F8;"></span>Accent: <code>#0065F8</code> (rgb(0, 101, 248)) – used in backgrounds and highlights</li>
+            <li><span class="color-swatch" style="background-color:#00CAFF;"></span>Neutral: <code>#00CAFF</code> (rgb(0, 202, 255)) – used for text containers</li>
+            <li><span class="color-swatch" style="background-color:#00FFDE;"></span>Secondary: <code>#00FFDE</code> (rgb(0, 255, 222)) – used for buttons and links</li>
         </ul>
-        <p><strong>Color Palette Link:</strong> <a href="https://colorhunt.co/palette/8fcaa1e3f9d1f8efe774b557"  target="_blank">View Color Palette</a></p>
+        <p><strong>Color Palette Link:</strong> <a href="https://colorhunt.co/palette/4300ff0065f800caff00ffde"  target="_blank">View Color Palette</a></p>
     </div>
 
     <!-- Section: Typography -->
