--- a/project/index.html
+++ b/project/index.html
@@ -20,6 +20,7 @@
         <!-- Menú de navegación -->
         <nav>
             <ul id="navMenu">
+                <li><a href="index.html">Home</a></li>
                 <li><a href="activity.html">Activity</a></li>
                 <li><a href="library.html">Library</a></li>
                 <li><a href="help.html">Help</a></li>
