--- a/project/help.html
+++ b/project/help.html
@@ -17,6 +17,7 @@
         <button id="menuToggle" class="menu-button">☰ Menu</button>
         <nav>
             <ul id="navMenu">
+                <li><a href="index.html">Home</a></li>
                 <li><a href="activity.html">Activity</a></li>
                 <li><a href="library.html">Library</a></li>
                 <li><a href="help.html">Help</a></li>
